--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-scripts": "1.0.14"
+    "react-scripts": "1.0.14",
+    "tether": "^1.4.0",
+    "util": "^0.10.3"
   },
   "scripts": {
     "start": "react-scripts start",
