--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "bootstrap": "4.0.0-alpha.6",
+    "enzyme": "^3.1.0",
     "gulp-sass": "^3.1.0",
     "jquery": "^3.2.1",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-scripts": "1.0.14",
+    "react-test-renderer": "^16.0.0",
     "tether": "^1.4.0",
     "util": "^0.10.3"
   },
