--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "4.0.0-alpha.6",
     "enzyme": "^3.1.0",
+    "enzyme-adapter-react-16": "^1.0.2",
     "gulp-sass": "^3.1.0",
     "jquery": "^3.2.1",
     "prop-types": "^15.6.0",
