--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "4.0.0-alpha.6",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.2",
+    "font-awesome": "^4.7.0",
     "gulp-sass": "^3.1.0",
     "jquery": "^3.2.1",
     "prop-types": "^15.6.0",
