--- a/package.json
+++ b/package.json
@@ -3,14 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-cache-inmemory": "^1.0.0",
+    "apollo-client": "^2.0.1",
+    "apollo-client-preset": "^1.0.1",
+    "apollo-link": "^1.0.0",
+    "apollo-link-http": "^1.1.0",
     "bootstrap": "4.0.0-alpha.6",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.2",
     "font-awesome": "^4.7.0",
+    "graphql": "^0.11.7",
+    "graphql-tag": "^2.5.0",
     "gulp-sass": "^3.1.0",
     "jquery": "^3.2.1",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
+    "react-apollo": "^2.0.0",
     "react-dom": "^16.0.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14",
