--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "apollo-client": "^2.0.1",
     "apollo-client-preset": "^1.0.1",
     "apollo-link": "^1.0.0",
+    "apollo-link-context": "^1.0.2",
     "apollo-link-http": "^1.1.0",
     "bootstrap": "4.0.0-alpha.6",
     "enzyme": "^3.2.0",
