--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-test-renderer": "^16.1.1",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.75.1",
+    "sinon": "^4.1.2",
     "tether": "^1.4.0",
     "util": "^0.10.3"
   },
