--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-sass": "^3.1.0",
     "jquery": "^3.2.1",
     "prop-types": "^15.6.0",
+    "raf": "^3.4.0",
     "react": "^16.0.0",
     "react-apollo": "^2.0.0",
     "react-dom": "^16.0.0",
@@ -35,5 +36,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-flow": "^6.23.0",
+    "flow-bin": "^0.61.0"
   }
 }
